--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -25,10 +25,8 @@
             日本でも年々人気の高まるハロウィン。
             <br />今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。
           </p>
-          <audio src="ichi.mp3" controls />
-        </section>
-        <section>
-          <h2>私のおすすめ和菓子アンケート</h2>
+          <audio src="ichi.mp3" controls></audio>
+          <h3>私のおすすめ和菓子アンケート</h3>
           <form>
             <label>氏名</label>
             <input type="text" placeholder="名前を入力してください" />
@@ -56,7 +54,7 @@
             <br />
             <label>個人情報保護方針に同意する</label>
             <input type="checkbox" />
-            <br /><br />
+            <br />
             <input type="submit" value="送信" />
             <input type="reset" value="リセット" />
           </form>
